--- a/style/booking.css
+++ b/style/booking.css
@@ -38,6 +38,8 @@ h1 {
   border-radius: 15px;
   text-align: center;
   font-size: 2rem;
+  width: 100%;
+  font-family: "Noto Serif", serif;
 }
 
 .flight-card {
@@ -53,6 +55,7 @@ h1 {
   max-width: 1300px;
   white-space: nowrap;
   box-sizing: border-box;
+  gap: 40px;
 }
 
 .flight-card:hover {
@@ -71,7 +74,7 @@ h1 {
   font-weight: bold;
   color: var(--text-dark);
   margin-bottom: 0.5rem;
-  padding-right: 3.5rem;
+  padding-right: 0;
 }
 
 .depart {
@@ -83,7 +86,26 @@ h1 {
 }
 
 .route {
-  margin-top: 0.3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 0.5rem;
+  gap: 10px;
+}
+
+.route .from {
+  flex: 1;
+  text-align: left;
+}
+
+.route .direct {
+  flex: 1;
+  text-align: center;
+}
+
+.route .to {
+  flex: 1;
+  text-align: right;
 }
 
 .details p {
