--- a/style/payment.css
+++ b/style/payment.css
@@ -20,7 +20,6 @@ body {
   background-color: var(--extra-light);
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 
 h1 {
@@ -76,7 +75,9 @@ h2 {
   border-bottom: 1px dotted #e0e0e0;
 }
 
-.label, .info, .price{
+.label,
+.info,
+.price {
   color: var(--text-dark);
 }
 
@@ -123,7 +124,8 @@ h2 {
 }
 
 .select-method input[type="radio"] {
-  accent-color: var(--primary-color-dark); /* tô màu nút radio */
+  accent-color: var(--primary-color-dark);
+  /* tô màu nút radio */
   transform: scale(1.2);
   cursor: pointer;
 }
