--- a/style/login.css
+++ b/style/login.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background-image: url("../img/anh_nen.jpg");
+  background-image: url("../assets/img/anh_nen.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
