--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -46,7 +46,7 @@
         </a>
       </li>
       <li>
-        <a href="#managers">
+        <a href="managers.html">
           <i class="fas fa-users-cog"></i>
           <span>Managers</span>
         </a>
