--- a/style/passenger-info.css
+++ b/style/passenger-info.css
@@ -71,7 +71,7 @@ h2 {
 .note {
   margin: 10px 10px;
   background-color: #fff;
-  text-align: center;
+  text-align: left;
   color: var(--text-dark);
   font-size: 0.95rem;
   margin-bottom: 15px;
