--- a/style/interface.css
+++ b/style/interface.css
@@ -16,13 +16,13 @@
 }
 
 /* Phan diem den pho bien */
-.section__container {
+.section_container {
   max-width: var(--max-width);
   margin: auto;
   padding: 5rem 1rem;
 }
 
-.section__header {
+.section_header {
   margin-bottom: 5px;
   font-size: 2.5rem;
   font-weight: 700;
@@ -30,7 +30,7 @@
   text-align: center;
 }
 
-.section__description {
+.section_description {
   max-width: 600px;
   margin-inline: auto;
   color: var(--text-light);
@@ -38,7 +38,7 @@
 }
 
 /* phan hop thoai va tieu de trang*/
-.hero__section {
+.hero_section {
   background-image: url("../assets/background2.jpg");
   background-size: cover;
   background-position: center;
@@ -106,7 +106,7 @@ nav {
   z-index: 1000;
 }
 
-.nav__header {
+.nav_header {
   padding: 1rem;
   width: 100%;
   display: flex;
@@ -114,35 +114,61 @@ nav {
   justify-content: space-between;
 }
 
-.nav__logo .logo {
+.nav_logo .logo {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  text-decoration: none;
   font-size: 1.5rem;
   color: var(--extra-light);
 }
 
-.nav__btns {
+.nav_logo img {
+  height: 100px;
+  width: auto;
+}
+
+.logo-text {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+}
+
+.logo-text .brand {
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: var(--text-dark);
+}
+
+.logo-text .slogan {
+  font-size: 1.2rem;
+  color: var(--text-dark);
+}
+
+.nav_btns {
   display: none;
 }
 
 /* phan diem den pho bien */
-.destination__container {
+.destination_container {
   text-align: center;
   padding: 60px 0;
 }
 
-.destination__container .section__header {
+.destination_container .section_header {
   font-size: 2rem;
   font-weight: 700;
   margin-bottom: 10px;
   color: var(--text-dark);
 }
 
-.destination__container .section__description {
+.destination_container .section_description {
   color: var(--text-light);
   margin-bottom: 40px;
   font-size: 1rem;
 }
 
-.destination__grid {
+.destination_grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 25px;
@@ -150,7 +176,7 @@ nav {
   margin: 0 auto;
 }
 
-.destination__card {
+.destination_card {
   background-color: #fff;
   border-radius: 1rem;
   overflow: hidden;
@@ -161,7 +187,7 @@ nav {
   margin-bottom: 0.4rem;
 }
 
-.destination__card img {
+.destination_card img {
   width: 100%;
   height: 350px;
   object-fit: cover;
@@ -170,30 +196,30 @@ nav {
   transition: transform 0.4s ease;
 }
 
-.destination__card:hover img {
+.destination_card:hover img {
   transform: scale(1.05);
 }
 
-.destination__card__details {
+.destination_card_details {
   text-align: center;
   padding: 1rem;
   background: #fafafa;
 }
 
-.destination__card__details h4 {
+.destination_card_details h4 {
   font-size: 1.1rem;
   font-weight: 600;
   color: var(--text-dark);
   margin-bottom: 0.3rem;
 }
 
-.destination__card__details p {
+.destination_card_details p {
   color: var(--text-light);
   font-size: 0.95rem;
   margin-bottom: 0.4rem;
 }
 
-.destination__rating {
+.destination_rating {
   color: #f5b000;
   font-weight: 600;
   font-size: 0.95rem;
@@ -203,47 +229,47 @@ nav {
   justify-content: center;
 }
 
-.destination__card:hover .destination__rating {
+.destination_card:hover .destination_rating {
   transform: translateY(-8px);
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 }
 
 @media (max-width: 900px) {
-  .destination__grid {
+  .destination_grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 @media (max-width: 600px) {
-  .destination__grid {
+  .destination_grid {
     grid-template-columns: 1fr;
   }
 
-  .destination__card img {
+  .destination_card img {
     height: 200px;
   }
 }
 
 /* gioi thieu ve Lotus Travel */
-.showcase__container {
+.showcase_container {
   display: grid;
   gap: 2rem;
   overflow: hidden;
 }
 
-.showcase__content h4 {
+.showcase_content h4 {
   margin-bottom: 2rem;
   font-size: 3rem;
   font-weight: 600;
   color: var(--text-dark);
 }
 
-.showcase__content p {
+.showcase_content p {
   margin-bottom: 1rem;
   color: var(--text-light);
 }
 
-.showcase__content .btn {
+.showcase_content .btn {
   display: inline-block;
   width: auto;
   max-width: 100%;
@@ -255,7 +281,7 @@ nav {
   border-radius: 5px;
 }
 
-.showcase__content .btn:hover {
+.showcase_content .btn:hover {
   color: var(--text-dark);
 }
 
@@ -263,7 +289,7 @@ footer {
   background-color: var(--extra-light);
 }
 
-.footer__container {
+.footer_container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   align-items: flex-start;
@@ -274,50 +300,67 @@ footer {
   overflow: hidden;
 }
 
-.footer__col {
+.footer_col {
   min-width: 250px;
+  margin: 10px;
 }
 
-.footer__col p {
+.footer_logo {
+  display: flex;
+  align-items: center;
+}
+
+.footer_logo img {
+  width: 100px;
+  gap: 0px;
+}
+
+.footer_col p {
   max-width: 300px;
   margin-block: 2rem;
   color: var(--text-light);
   line-height: 1.6;
 }
 
-.footer__col h4 {
+.footer_col h4 {
   margin-bottom: 2rem;
   font-size: 1.2rem;
   font-weight: 600;
   color: var(--text-dark);
 }
 
-.footer__links {
+.footer_links {
   display: grid;
   gap: 1rem;
 }
 
-.footer__links span {
+.footer_links span {
   color: var(--text-light);
 }
 
-.footer__col form {
+.footer_col form {
   display: grid;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
-.footer__bar {
+.footer_bar {
   padding: 1rem;
   font-size: 0.9rem;
   color: var(--text-light);
   text-align: center;
 }
 
+.footer_logo p {
+  color: var(--text-dark);
+  font-size: 1.5rem;
+  white-space: nowrap;
+}
+
 .sponsor {
   background-color: var(--extra-light);
 }
 
-.logo__sponsors {
+.logo_sponsors {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -330,7 +373,7 @@ footer {
   box-sizing: border-box;
 }
 
-.logo__sponsors img {
+.logo_sponsors img {
   width: 120px;
   height: 70px;
   object-fit: contain;
@@ -338,37 +381,37 @@ footer {
   transition: transform 0.3s ease;
 }
 
-.logo__sponsors img:hover {
+.logo_sponsors img:hover {
   transform: scale(1.05);
 }
 
 @media (width > 540px) {
-  .destination__grid {
+  .destination_grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .journey__grid {
+  .journey_grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .showcase__container {
+  .showcase_container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
   }
 
-  .banner__container {
+  .banner_container {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .discover__grid {
+  .discover_grid {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .footer__container {
+  .footer_container {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .footer__col:last-child {
+  .footer_col:last-child {
     grid-area: 2/1/3/2;
   }
 }
@@ -384,11 +427,11 @@ footer {
     z-index: 1000;
   }
 
-  .nav__header {
+  .nav_header {
     justify-content: center;
   }
 
-  .nav__logo .logo {
+  .nav_logo .logo {
     color: var(--text-dark) !important;
   }
 }
@@ -405,21 +448,21 @@ footer {
     gap: 2rem;
   }
 
-  .nav__header {
+  .nav_header {
     flex: 1;
     padding: 0;
     background-color: transparent;
   }
 
-  .nav__logo .logo {
+  .nav_logo .logo {
     color: var(--text-dark);
   }
 
-  .nav__menu__btn {
+  .nav_menu_btn {
     display: none;
   }
 
-  .nav__links {
+  .nav_links {
     position: static;
     width: fit-content;
     padding: 0;
@@ -428,60 +471,60 @@ footer {
     transform: none !important;
   }
 
-  /* .nav__links a {
+  /* .nav_links a {
     color: var(--text-dark);
   }
 
-  .nav__links a:hover {
+  .nav_links a:hover {
     color: var(--primary-color);
   } */
 
-  /* .nav__links li:last-child {
+  /* .nav_links li:last-child {
     display: none;
   } */
 
-  .nav__btns {
+  .nav_btns {
     flex: 1;
     display: flex;
     justify-content: flex-end;
   }
 
-  .nav__btns button {
+  .nav_btns button {
     padding: 0.75rem 2rem;
     background-color: var(--text-dark);
   }
 
-  .destination__grid {
+  .destination_grid {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .showcase__container {
+  .showcase_container {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .showcase__content {
+  .showcase_content {
     grid-column: 2/4;
   }
 
-  .discover__grid {
+  .discover_grid {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .footer__container {
+  .footer_container {
     grid-template-columns: 2fr 1fr 1fr 1.5fr;
   }
 
-  .footer__col:last-child {
+  .footer_col:last-child {
     grid-area: unset;
   }
 }
 
 @media (width > 1200px) {
-  .header__content {
+  .header_content {
     padding-inline: 1rem 0;
   }
 
-  .destination__grid {
+  .destination_grid {
     gap: 2rem;
   }
 }
@@ -743,14 +786,14 @@ footer {
   background: rgb(255, 255, 255);
 }
 
-.feedback__grid {
+.feedback_grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1.5rem;
   margin-top: 2rem;
 }
 
-.feedback__card {
+.feedback_card {
   background: rgb(213, 231, 237);
   border-radius: 1rem;
   padding: 1.5rem;
@@ -763,17 +806,17 @@ footer {
   justify-content: space-between;
 }
 
-.feedback__card:hover {
+.feedback_card:hover {
   transform: translateY(-5px);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
 }
 
-.feedback__rating {
+.feedback_rating {
   color: #fbbc04;
   margin-bottom: 10px;
 }
 
-.feedback__user {
+.feedback_user {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -781,23 +824,22 @@ footer {
   margin-top: 15px;
 }
 
-.feedback__user img {
+.feedback_user img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
   object-fit: cover;
 }
 
-.feedback__user h4 {
+.feedback_user h4 {
   font-size: 1rem;
   margin: 0;
 }
 
-.feedback__user h4 {
+.feedback_user h4 {
   color: var(--text-dark)
 }
 
-.feedback__user small,
-p {
+.feedback_user small, p {
   color: var(--text-light);
 }
