--- a/style/passenger-info.css
+++ b/style/passenger-info.css
@@ -7,6 +7,7 @@
   --text-light: #4d648d;
   --extra-light: #f3f4f6;
   --max-width: 1200px;
+  --header-color: #e9effdff;
 }
 
 /* Reset mặc định */
@@ -16,34 +17,42 @@
   box-sizing: border-box;
 }
 
-/* Tiêu đề chính */
-h1 {
-  background: linear-gradient(rgba(178, 201, 229, 0.5),
-      #58a6cd);
-  backdrop-filter: blur(6px);
-  color: var(--extra-light);
-  padding: 25px;
-  border-radius: 15px;
-  text-align: center;
-  margin-bottom: 35px;
-  width: 100%;
-  font-size: 2rem;
-  font-family: "Noto Serif", serif;
-}
-
-/* Toàn trang */
-body {
-  background: var(--extra-light);
+.page-content {
+  margin-top: 70px; /* chừa header fixed */
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+/* Tiêu đề chính */
+h1 {
+  width: 100%;
+  background-color: var(--primary-color-dark);
+  /* background: linear-gradient(
+    rgba(178, 201, 229, 0.5),
+    #58a6cd
+  );
+  backdrop-filter: blur(6px); */
+  color: var(--extra-light);
+  padding: 25px;
+  text-align: center;
+  margin-bottom: 35px;
+  border-radius: 15px;
+  font-size: 1.5rem;
+  font-family: "Noto Serif", serif;
+}
+
+
+body {
+  background: var(--extra-light);
   font-family: "Noto Serif", serif;
   color: var(--text-dark);
 }
 
+
 /* Form thông tin hành khách */
 .passenger-information {
-  background: #fff;
+  /* background: #fff;
   padding: 25px 30px;
   border-radius: 15px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
@@ -51,7 +60,10 @@ body {
   max-width: 600px;
   margin-bottom: 30px;
   transition: transform 0.2s ease;
-  border: 1.5px solid rgba(5, 35, 71, 0.6);
+  border: 1.5px solid rgba(5, 35, 71, 0.6); */
+  background: transparent;
+  border: none;
+  box-shadow: none;
 }
 
 .passenger-information:hover {
@@ -201,4 +213,41 @@ button[type="submit"]:hover {
 .service-item select:focus {
   border-color: var(--primary-color);
   box-shadow: 0 0 5px rgba(135, 179, 234, 0.4);
+}
+
+.site-header {
+  position: fixed;          
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  padding: 12px 40px;
+  /* background-color: rgba(255,255,255,0.85);
+  backdrop-filter: blur(6px); */
+  background-color: var(--header-color);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+  margin-bottom: 1.5rem;
+}
+
+.logo {
+  text-decoration: none;
+  display: flex;
+  align-items: center;   
+  gap: 20px;             
+}
+
+.logo img {
+  height: 40px;
+  width: auto;
+  transform: scale(1.5);     
+  transform-origin: left center;
+}
+
+.logo span {
+  font-family: "Noto Serif", serif;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: var(--primary-color-dark);
 }
