--- a/style/managebooking.css
+++ b/style/managebooking.css
@@ -30,7 +30,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 90px; /* chừa chỗ cho header fixed */
+    padding-top: 90px; 
 }
 
 
@@ -68,10 +68,11 @@ body {
 
 #managebooking-detail .flight-detail h3,
 #managebooking-detail .flight-detail h2 {
+    margin-top: 20px;
     font-size: 1.2rem;
     color: var(--primary-color-dark);
     text-align: center;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
 }
 
 #managebooking-detail .flight-detail p {
