--- a/style/checkin.css
+++ b/style/checkin.css
@@ -289,6 +289,7 @@ body {
     font-size: 0.95rem;
     padding: 6px 0;
     border-bottom: 1px dotted #ccd6e0;
+    color: var(--text-dark);
 }
 
 .cf-flights p strong {
