--- a/style/checkin.css
+++ b/style/checkin.css
@@ -69,7 +69,8 @@ body {
 
 #checkin-detail .boarding-pass,
 #checkin-detail .boarding-pass-info {
-    background: linear-gradient(135deg, var(--primary-color), #ffffff);
+    /* background: linear-gradient(135deg, var(--primary-color), #ffffff); */
+    background-color: var(--header-color);
     border-radius: 14px;
     padding: 20px 22px;
     border: 1px solid #dfe3e8;
