--- a/style/managebooking.css
+++ b/style/managebooking.css
@@ -59,7 +59,8 @@ body {
 }
 
 #managebooking-detail .flight-detail {
-    background: linear-gradient(135deg, var(--primary-color), #ffffff);
+    /* background: linear-gradient(135deg, var(--primary-color), #ffffff); */
+    background-color: var(--header-color);
     border-radius: 14px;
     padding: 20px 22px;
     border: 1px solid #dfe3e8;
