--- a/src/style/payment.css
+++ b/src/style/payment.css
@@ -137,7 +137,8 @@ h1 {
 } */
 
 button[type="submit"] {
-  margin: -10px;
+  margin-top: -20px;
+  margin-bottom: 20px;
   width: 60%;
   padding: 12px;
   background: var(--primary-color-dark);
