--- a/src/style/indexPage.css
+++ b/src/style/indexPage.css
@@ -554,10 +554,11 @@ footer {
 .booking-section .btn {
   font-size: 1rem;
   font-weight: 400;
-  padding: 10px 16px;
+  padding: 12px 16px;
   height: 42px;
   align-self: flex-end;
-  margin-top: 50px;
+  margin-top: 48px;
+
 }
 
 .booking-container,
@@ -691,34 +692,24 @@ footer {
 }
 
 .passenger-group {
-  position: relative;
+  min-width: 100px;
+  max-width: 120px;
 }
 
-.passenger-box {
-  margin-top: 5px;
-  padding: 10px;
+.passenger-group label {
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+
+.passenger-group input {
+  width: 100%;
+  height: 45px;
+  padding: 8px 8px;
+  font-size: 14px;
+  border-radius: 6px;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  cursor: pointer;
-  background: #fff;
-  transition: 0.2s;
-  width: 120px;
-  color: var(--text-dark);
-}
-
-.passenger-popup {
-  position: absolute;
-  top: 110%;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgb(255, 255, 255);
-  border-radius: 12px;
-  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-  padding: 14px 18px;
-  width: 260px;
-  z-index: 9999;
-  display: none;
-  animation: fadeIn 0.2s ease;
+  text-align: center;
+  margin-top: 6px;
 }
 
 @keyframes fadeSlide {
@@ -733,11 +724,12 @@ footer {
   }
 }
 
-.passenger-popup.active {
+/* .passenger-popup.active {
   display: block;
-}
+  margin: 5px;
+} */
 
-.passenger-row {
+/* .passenger-row {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -772,7 +764,7 @@ footer {
   text-align: center;
   font-weight: 600;
   color: var(--text-dark);
-}
+} */
 
 .checkin-group,
 .management-group {
@@ -789,7 +781,7 @@ footer {
   font-size: 16px;
   color: var(--primary-color-dark);
   text-transform: uppercase;
-  margin-bottom: -35px;
+  margin-bottom: -32px;
 }
 
 .management-group input {
@@ -818,14 +810,14 @@ footer {
   /* margin-top: 5px; */
 }
 
-.checkin-container {
+/* .checkin-container {
   box-shadow: none !important;
-  margin: -20px auto !important;
-  margin-bottom: -30px;
+  margin: -15px auto !important;
+  margin-bottom: -25px;
   width: 90vw;
   border: none !important;
   max-width: 900px;
-}
+} */
 
 .checkin-container .btn {
   width: fit-content;
