--- a/src/style/payment.css
+++ b/src/style/payment.css
@@ -82,7 +82,16 @@ h1 {
 }
 
 /* Card chung: passenger info + services */
-.passenger-info-form,
+.passenger-info-form {
+  background: var(--white);
+  padding: 25px 30px;
+  border-radius: 15px;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+}
+
 .services {
   background: var(--white);
   padding: 25px 30px;
@@ -90,11 +99,11 @@ h1 {
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   width: 100%;
   box-sizing: border-box;
-  /* margin-bottom: 25px; */
   border: none;
+  max-width: 100%;
 }
 
-/* Label trái - value phải */
+
 .passenger-info-form p,
 .services p {
   display: flex;
@@ -118,11 +127,6 @@ h1 {
   text-align: right;
 }
 
-/* Service items */
-/* .service-item {
-  margin-bottom: 0px;
-} */
-
 /* .service-item select {
   width: 100%;
   padding: 8px;
@@ -136,9 +140,9 @@ h1 {
   box-shadow: 0 0 5px rgba(135, 179, 234, 0.4);
 } */
 
-button[type="submit"] {
-  margin-top: -20px;
-  margin-bottom: 20px;
+.payment-container button {
+  display: block;           /* block để dễ căn giữa */
+  margin: -20px auto 20px;      /* cách trên 20px, tự động căn giữa, dưới 0 */
   width: 60%;
   padding: 12px;
   background: var(--primary-color-dark);
@@ -147,20 +151,18 @@ button[type="submit"] {
   border-radius: 8px;
   font-size: 1.1rem;
   cursor: pointer;
-  /* font-weight: 600; */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
   transition: all 0.3s ease;
-  align-self: center;
 }
 
-
-button[type="submit"]:hover {
+.payment-container button:hover {
   transform: translateY(-2px);
   box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
   filter: brightness(1.05);
   background-color: var(--primary-color);
   color: var(--text-dark);
 }
+
 
 /* QR overlay */
 .qr-overlay {
@@ -243,4 +245,23 @@ button[type="submit"]:hover {
   font-size: 1.4rem;
   border-bottom: 2px solid var(--primary-color);
   padding-bottom: 8px;
+}
+
+
+.passenger-block {
+  padding: 1rem;
+  border-bottom: 1px solid #ccc;
+}
+
+.passenger-block:last-child {
+  border-bottom: none;
+}
+
+/* nền xen kẽ để dễ phân biệt */
+.passenger-block.even {
+  background-color: #f9f9f9;
+}
+
+.passenger-block.odd {
+  background-color: #ffffff;
 }
