--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Be Vietnam Pro", sans-serif;
 }
 
 .login-page .main {
