--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --primary-color: #87b3ea;
@@ -21,7 +21,7 @@
 }
 
 body {
-  font-family: "DM Sans", sans-serif;
+  font-family: "Be Vietnam Pro", sans-serif;
   background-color: var(--extra-light);
   color: var(--text-dark);
   line-height: 1.6;
